--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="search">Search</string>
     <string name="create">Create</string>
     <string name="favorites">Favorites</string>
+    <string name="change_restaurant">Change restaurant</string>
+    <string name="country">Country</string>
+    <string name="poland">Poland</string>
+    <string name="submit">Submit</string>
 </resources>
