restaurant menu fragment xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="country">Country</string>
     <string name="poland">Poland</string>
     <string name="submit">Submit</string>
+    <string name="dish_name_label">Dish name</string>
 </resources>
