working displaying saveSetFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="chosen_restaurant_fun">Chosen restaurant: %s</string>
     <string name="cancel">Cancel</string>
     <string name="create_set">Create Set</string>
+    <string name="set">Set</string>
 </resources>
