--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="set">Set</string>
     <string name="set_name">Set name</string>
     <string name="save">Save</string>
+    <string name="number_of_sets">Number of sets</string>
 </resources>
