--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="set">Set</string>
     <string name="set_name">Set name</string>
     <string name="save">Save</string>
-    <string name="number_of_sets">Number of sets</string>
+    <string name="number_of_sets">Number of sets:</string>
+    <string name="set_size">Set size:</string>
 </resources>
