--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,11 @@
     <string name="set_size">Set size:</string>
     <string name="calories_in_set">Number of calories in set:</string>
     <string name="kcal">kcal</string>
+    <string name="delete_favorite_set_dialog">Are you sure you want to delete this set?</string>
 
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
     <string name="save">Save</string>
+    <string name="accept">Accept</string>
+    <string name="Cancel">Cancel</string>
 </resources>
